<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Celestial Clock  &#169; DelS</string>
    <string name="title_activity_celestial_clock">Celestial Clock &#169;DelS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Celestial Clock  &#169; DelS</string>
    <string name="local_time_lbl">Local Time</string>
    <string name="utc_time_lbl">UTC Time</string>
    <string name="sid_time_lbl">Sidereal Time</string>
    <string name="solar_time_lbl">Solar Time</string>
    <string name="location_lbl">Location</string>
    
</resources>
